Fix nav button on slideshow and overlapping title on some screen resolution

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -449,18 +449,7 @@ article, aside {
 }
 
 aside {
-  background: $light2;
   margin: 0 !important;
-  padding: 20px 120px 20px 120px;
-  box-shadow: inset 0 0 10px $light3;
-
-  @media screen and (min-width: 600px) and (max-width: 999px) {
-    padding: 20px 20px 20px 40px;
-  }
-  @media screen and (max-width: 599px) {
-    padding: 20px 20px 20px 20px;
-  }
-
   input[type="radio"]#no_gallery {
     display: none;
     & + div.gallery_list {
@@ -592,18 +581,5 @@ aside {
         }
       }
     }
-  }
-}
-
-footer.footer {
-  text-align: left;
-  @media screen and (max-width: 599px) {
-    margin: 40px 20px 20px 20px;
-  }
-  @media screen and (min-width: 600px) and (max-width: 999px) {
-    margin: 40px 20px 20px 60px;
-  }
-  @media screen and (min-width: 1000px) {
-    margin: 40px 120px 20px 120px;
   }
 }
