--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -126,7 +126,7 @@ section {
 
 
   section {
-    flex-shrink: 0;
+    flex-shrink: 1;
     flex-grow: 1;
 
     @media screen and (min-width: 1000px) {
